--- a/ssi_framework/framework_dev.properties
+++ b/ssi_framework/framework_dev.properties
@@ -4,8 +4,8 @@ logging_level = info
 ds_name=towell_ds
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://127.0.0.1:3306/qccr?useUnicode=true&amp;characterEncoding=utf8
-username=toowell
-password=toowell2013db
+username=root
+password=root
 initSize = 5
 maxActive = 10
 maxIdle=5
