--- a/ssi_framework/framework_pre.properties
+++ b/ssi_framework/framework_pre.properties
@@ -3,9 +3,9 @@ logging_level = info
 #druid 数据源
 ds_name=towell_ds
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://192.168.2.126:3306/qccr?useUnicode=true&characterEncoding=utf8
-username=toowell
-password=toowell2013db
+url=jdbc:mysql://192.168.2.126:3306/data?useUnicode=true&characterEncoding=utf8
+username=root
+password=root
 initSize=5
 maxActive=10
 maxIdle=5
