--- a/ssi_framework/framework_dev.properties
+++ b/ssi_framework/framework_dev.properties
@@ -3,7 +3,7 @@ logging_level = info
 #druid 数据源
 ds_name=towell_ds
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/qccr?useUnicode=true&amp;characterEncoding=utf8
+url=jdbc:mysql://127.0.0.1:data/qccr?useUnicode=true&amp;characterEncoding=utf8
 username=root
 password=root
 initSize = 5
